<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome to Our Shoe Store</string>
    <string name="enjoy">Enjoy buying and browsing our new shoes.</string>
    <string name="instructions">instructions</string>
    <string name="instructions_details">You can add product and its details</string>
    <string name="shoe_size">Size: %.1f</string>
    <string name="shoe_name">Name: %s</string>
    <string name="shoe_company">Company: %s</string>
    <string name="shoe_description">Description: %s</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="save">save</string>
    <string name="description">Description</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="name">Name</string>
</resources>
